# trades-hub

./: .env.example  .gitignore  Cargo.toml  README.md  askama.toml
.github/: copilot-instructions.md
migrations/: 0001_init.sql  0002_fts5.sql
src/: db.rs  main.rs
src/routes/: mod.rs
src/static/: app.js  tailwind.css
templates/: index.html  layout.html  search_results.html
